--- a/FinalAndroidSmartHome/app/build.gradle
+++ b/FinalAndroidSmartHome/app/build.gradle
@@ -29,6 +29,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.etebarian:meow-bottom-navigation-java:1.2.0'
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.squareup.retrofit2:retrofit:2.1.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
